# rust-htmx-poc

./: Cargo.toml
src/: main.rs  repository.rs  routes.rs  view.rs
