[package]
name = "rust-htmx-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["tracing", "macros"] }
axum-embed = "0.1.0"
chrono = "0.4.41"
maud = { version = "0.27.0", features = ["axum"] }
rust-embed = { version = "8.7.2", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
